# django_template

./: .env-local  .gitignore  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  start.sh
poetry/: pyproject.toml
src/charity/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/config/: base.py  local.py
src/core/: asgi.py  celery.py  helpers.py  middleware.py  models.py  urls.py  uwsgi.ini  wsgi.py
