[tool.poetry]
name = "tn-charity"
version = "0.1.0"
description = "charity backend project"
authors = ["Timur Valiev <cptchunk@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.9.*"
psycopg2-binary = "2.9.3"
requests = "2.27.1"
beautifulsoup4 = "4.11.1"
XlsxWriter = "3.0.3"
celery = "5.2.6"
redis = "4.3.1"
lxml = "4.8.0"
zeep = "4.1.0"
uWSGI = "2.0.20"
Django = "4.0.4"
django-redis = "5.2.0"
django-model-utils = "4.2.0"
django-environ = "0.8.1"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "5.1.0"
django-filter = "21.1"
channels = "3.0.4"
channels-redis = "3.4.0"
django-simple-history = "3.1.1"
django-debug-toolbar = "3.4.0"
drf-yasg = "1.20.0"
django-request-logging = "0.7.5"
django-phonenumber-field = "6.1.0"
Pillow = "9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
